# linuxsampler

gigedit/trunk/: AUTHORS  ChangeLog  Makefile.am  Makefile.cvs  NEWS  README  autogen.sh  clean.sh  configure.ac  gigedit.spec.in
gigedit/trunk/debian/: changelog  control  copyright  rules
gigedit/trunk/doc/quickstart/: Makefile.am  from_scratch.sgm  general_midi_drummap.sgm  gigedit_quickstart.xml  glossary.sgm  keybindings.sgm  libgig.sgm  live_editing.sgm  mc505_midi_drummap.sgm  see_also.sgm  style.css  technical.sgm
gigedit/trunk/gfx/: status_attached.xpm  status_detached.xpm
gigedit/trunk/po/: POTFILES.in  de.po  sv.po
gigedit/trunk/src/: Makefile.am  dimensionmanager.cpp  dimensionmanager.h  dimregionchooser.cpp  dimregionchooser.h  dimregionedit.cpp  dimregionedit.h  gigedit.cpp  gigedit.h  main.cpp  mainwindow.cpp  mainwindow.h  paramedit.cpp  paramedit.h  regionchooser.cpp  regionchooser.h
gigedit/trunk/src/gigedit/: CombineInstrumentsDialog.cpp  CombineInstrumentsDialog.h  MacHelper.h  MacHelper.mm  Makefile.am  ManagedWindow.cpp  ManagedWindow.h  ReferencesView.cpp  ReferencesView.h  Settings.cpp  Settings.h  compat.cpp  compat.h  dimensionmanager.cpp  dimensionmanager.h  dimregionchooser.cpp  dimregionchooser.h  dimregionedit.cpp  dimregionedit.h  gigedit.cpp  gigedit.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  midirules.cpp  midirules.h  paramedit.cpp  paramedit.h  regionchooser.cpp  regionchooser.h  scripteditor.cpp  scripteditor.h  scriptslots.cpp  scriptslots.h  wrapLabel.cc  wrapLabel.hh
gigedit/trunk/src/plugin/: Makefile.am  linuxsamplerplugin.cpp  linuxsamplerplugin.h
gigedit/trunk/win32/: README  gigedit.dev.in  libgigedit.dev.in
libgig/branches/release0_7_0/src/: Makefile.am  Makefile.in  RIFF.cpp  gigdump.cpp
libgig/branches/release0_7_1/man/: Makefile.am  Makefile.in
libgig/branches/release0_7_1/src/: Makefile.am  gig.h  gigextract.cpp
libgig/branches/release2_0_1/man/: Makefile.am
libgig/branches/release3_3_0/src/: Makefile.am  RIFF.h  gig.cpp
libgig/trunk/: ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  Makefile.cvs  Makefile.in  NEWS  README  TODO  aclocal.m4  akai.pc.in  config.h.in  configure  configure.ac  configure.in  gig.pc.in  libgig.kdevelop  libgig.kdevelop.pcs  libgig.kdevses  libgig.pc.in  libgig.spec.in  mkinstalldirs
libgig/trunk/debian/: Makefile.am  README.Debian  changelog  control  copyright  libgig-dev.install  libgig6.install  libgig6.postinst  rules
libgig/trunk/doc/: Makefile.am  Makefile.in  index.html  mainpage.dox
libgig/trunk/libgig/libgig/: libgig.spec.in
libgig/trunk/man/: Makefile.am  akaidump.1.in  akaiextract.1.in  dlsdump.1  dlsdump.1.in  gig2mono.1.in  gig2stereo.1.in  gigdump.1  gigdump.1.in  gigextract.1  gigextract.1.in  gigmerge.1.in  korg2gig.1.in  korgdump.1.in  rifftree.1  rifftree.1.in  sf2dump.1  sf2dump.1.in
libgig/trunk/osx/: README.osx  wrapper.sh
libgig/trunk/osx/libgig.xcodeproj/: project.pbxproj
libgig/trunk/src/: Akai.cpp  Akai.h  DLS.cpp  DLS.h  Korg.cpp  Korg.h  Makefile.am  Makefile.in  RIFF.cpp  RIFF.h  SF.cpp  SF.h  dlsdump.cpp  gig.cpp  gig.h  gig2mono.cpp  gigdump.cpp  gigextract.cpp  gigmerge.cpp  helper.h  korg2gig.cpp  korgdump.cpp  rifftree.cpp  sf2dump.cpp
libgig/trunk/src/testcases/: GigWriteTest.cpp  GigWriteTest.h
libgig/trunk/src/tools/: Makefile.am  akaidump.cpp  akaiextract.cpp  dlsdump.cpp  gig2mono.cpp  gig2stereo.cpp  gigdump.cpp  gigextract.cpp  korg2gig.cpp  rifftree.cpp  sf2dump.cpp  sf2extract.cpp
libgig/trunk/templates/: cpp  h
libgig/trunk/win32/: Makefile.am  dlsdump.dev  gigdump.dev  gigextract.dev  libgig.dev  libgig.dev.in
libsf2/trunk/: AUTHORS  Makefile.am  configure.in
libsf2/trunk/src/: Makefile.am  RIFF.h  SF.cpp  SF.h  sf2dump.cpp
linuxsampler/branches/v0_2_0/src/: Makefile.am  linuxsampler.cpp
linuxsampler/trunk/: AUTHORS  ChangeLog  Doxyfile.in  Makefile  Makefile.am  Makefile.cvs  Makefile.in  Makefile.svn  NEWS  README  aclocal.m4  audioio.cpp  audioio.h  config.h.in  configure  configure.ac  configure.in  global.h  linuxsampler.kdevelop  linuxsampler.kdevelop.pcs  linuxsampler.kdevses  linuxsampler.pc.in  linuxsampler.spec.in
linuxsampler/trunk/Documentation/: lscp.xml
linuxsampler/trunk/benchmarks/: gigsynth.cpp  triang.cpp
linuxsampler/trunk/debian/: Makefile.am  README.Debian  changelog  control  copyright  liblinuxsampler-dev.install  liblinuxsampler.install  postrm  rules
linuxsampler/trunk/m4/: nptl_bug.m4
linuxsampler/trunk/man/: linuxsampler.1.in  lscp.1.in
linuxsampler/trunk/osx/: README.osx  autoconf_builder.sh  version.h  wrapper.sh
linuxsampler/trunk/osx/LinuxSampler.xcode/: project.pbxproj
linuxsampler/trunk/osx/linuxsampler.xcodeproj/: project.pbxproj
linuxsampler/trunk/scripts/: Makefile.am  create_instr_db.sql  generate_lscp_shell_reference.pl  generate_nksp_editor_parser.sh  generate_parser.sh  update_grammar.pl
linuxsampler/trunk/src/: DLS.h  EventListeners.h  Makefile.am  Makefile.in  RIFF.cpp  RIFF.h  Sampler.cpp  Sampler.h  alsaio.cpp  alsaio.h  audioio.cpp  audioio.h  audiothread.cpp  audiothread.h  diskthread.cpp  diskthread.h  eg_d.h  eg_vca.cpp  eg_vca.h  gig.cpp  gig.h  global.h  jackio.cpp  jackio.h  lfo.cpp  lfo.h  linuxsampler.cpp  ls_instr_script.cpp  midiin.cpp  midiin.h  modulationsystem.cpp  modulationsystem.h  ringbuffer.h  rtelmemorypool.h  rtmath.h  stream.cpp  stream.h  thread.cpp  thread.h  voice.cpp  (+1 more)
linuxsampler/trunk/src/audiodriver/: AudioChannel.cpp  AudioChannel.h  AudioOutputDevice.cpp  AudioOutputDevice.h  AudioOutputDeviceAlsa.cpp  AudioOutputDeviceAlsa.h  AudioOutputDeviceFactory.cpp  AudioOutputDeviceFactory.h  AudioOutputDeviceJack.cpp  AudioOutputDeviceJack.h  Makefile.am  Makefile.in
linuxsampler/trunk/src/common/: ArrayList.h  Condition.cpp  Condition.h  ConditionServer.cpp  ConditionServer.h  DynamicLibraries.cpp  Features.cpp  Features.h  File.cpp  File.h  LinuxSamplerException.h  Makefile.am  Makefile.in  Mutex.cpp  Mutex.h  Path.cpp  Path.h  Pool.h  RTAVLTree.h  RTAVLTreeTest.cpp  RTELMemoryPool.h  RTMath.cpp  RTMath.h  (+16 more)
(+1502 files in other folders)
